Endpoint for customer WIP
